--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "homepage": "https://github.com/pixelzee3/valorant-map-banner#readme",
   "devDependencies": {
-    "parcel": "^2.3.2"
+    "autoprefixer": "^10.4.4",
+    "parcel": "^2.3.2",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
     "react": "^17.0.2",
