--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.4",
     "parcel": "^2.3.2",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.0",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
