--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "valorant-map-banner",
   "version": "0.1.0",
   "private": true,
+  "start_url": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
